--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=5454
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://${viaduct.proxy.rlwy.net:localhost}:${13035:3306}/${railway:ecommerce}
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:13035/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${root:root}
-spring.datasource.password=${hAa5-gch6faEb3hCC3gdggAA1h512fEh:8797}
+spring.datasource.username=root
+spring.datasource.password=hAa5-gch6faEb3hCC3gdggAA1h512fEh
 
 
 #ORM s/w specific properties
